	20100413 (Till Straumann):

	* BLDApp/src/BLDMCast.h: moved (and renamed) definition of
	destination MC address and port number.

	20100408 (Till Straumann):

	* BLDApp/src/BLDMCast.c, BLDApp/src/BLDMCast.h,
	BLDApp/src/devBLDMcastStatus.c: Use 'bld' prefix for all global
	variables.

	Added C++ 'extern "C"' in header.

	Some beautification and elimination of dead code.

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Cannot use a UdpComm packet buffer to store
	ebeam data because the device support stuff accesses the same buffer.
	Hence it has to be copied anyways :-(. Therefore we use udpCommSend()...

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Added code to send using udpComm rather
	than straight BSD sockets.

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: FIXED arithmetics when setting HW timer
	(used 32-bit operations, storing result only into 64-bit which let
	the result be truncated and way too small).

	Added per-PV unmatched timestamp counters.

	Added some more debugging code (to be removed eventually).

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Read fast data from FCOM (1st shot at things).

	20100326 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Use timestamp returned by evrTimeGetFromPipeline()
	as a reference that must be matched by all PVs.
	Rather than memcmp()ing timestamps: check their pulse ID and verify
	that the timestamps match within a few minutes.

	20100326 (Till Straumann):

	* BLDApp/src/bldget.c, BLDApp/src/Makefile: Added test program
	to receive and dump BLD packet.

	20100326 (Till Straumann):

	* BLDApp/src/BLDMCast.c, BLDApp/src/BLDMCast.h,
	BLDApp/src/devBLDMcastStatus.c: Removed little-endian copy of
	ebeamInfo as well as memcpy that initialized it.
	ebeamInfo is now maintained in LE format directly and we use
	(hopefully) more efficient ways to byteswap.

	* BLDApp/src/BLDMCast.c, BLDApp/src/Makefile: replaced hardcoded
	IP address of MC interface by 'getenv("IPADDR1")'. IPADDR1 can be set